--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
+gemfile:
+  - Gemfile
+  - gemfiles/Gemfile.rails-3.2.13
 
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
