--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.4
 gemfile:
   - Gemfile
   - gemfiles/Gemfile.rails-3.2.13
+  - gemfiles/Gemfile.rails-4.0.x
 
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
