--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,19 @@
 language: ruby
+
 rvm:
   - 1.9.3
   - 2.0.0
-  - 2.1.4
+  - 2.1.5
+  - 2.2.0
+
 gemfile:
   - Gemfile
-  - gemfiles/Gemfile.rails-3.2.13
+  - gemfiles/Gemfile.rails-3.2.x
   - gemfiles/Gemfile.rails-4.0.x
+  - gemfiles/Gemfile.rails-4.1.x
 
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
+
 script:
   - bundle exec rspec spec
