[#issue-53] remove base migrations and add a generator to create tables for rapidfire

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
       gemfile: gemfiles/Gemfile.rails-4.0.x
 
 before_script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - cd spec/dummy && RAILS_ENV=test bundle exec rake db:migrate --trace && cd ../..
 
 script:
   - bundle exec rspec spec
