--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,11 @@ rvm:
   - 2.3.1
 
 gemfile:
-  - Gemfile
   - gemfiles/Gemfile.rails-3.2.x
   - gemfiles/Gemfile.rails-4.0.x
   - gemfiles/Gemfile.rails-4.1.x
   - gemfiles/Gemfile.rails-4.2.x
+  - gemfiles/Gemfile.rails-5.0.x
 
 matrix:
   exclude:
