--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,13 @@ matrix:
   exclude:
     # has test/unit/testcase removed, and also 3.2.x is too old to support
     # ruby 2.2.2. so ignoring this combination.
-    - rvm: 2.2.2
+    - rvm: 2.2.5
       gemfile: gemfiles/Gemfile.rails-3.2.x
+    # rack with rails 5 cannot be installed in ruby versions prior to 2.2.2
+    - rvm: 2.0.0
+      gemfile: gemfiles/Gemfile.rails-5.0.x
+    - rvm: 2.1.10
+      gemfile: gemfiles/Gemfile.rails-5.0.x
 
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
