--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: ruby
 
 rvm:
-  - 2.0.0
-  - 2.1.10
-  - 2.2.5
-  - 2.3.1
+  - 2.1.9
+  - 2.2.6
+  - 2.3.3
 
 gemfile:
   - gemfiles/Gemfile.rails-3.2.x
@@ -16,13 +15,11 @@ gemfile:
 matrix:
   exclude:
     # has test/unit/testcase removed, and also 3.2.x is too old to support
-    # ruby 2.2.2. so ignoring this combination.
-    - rvm: 2.2.5
+    # ruby 2.2.x. so ignoring this combination.
+    - rvm: 2.2.6
       gemfile: gemfiles/Gemfile.rails-3.2.x
     # rack with rails 5 cannot be installed in ruby versions prior to 2.2.2
-    - rvm: 2.0.0
-      gemfile: gemfiles/Gemfile.rails-5.0.x
-    - rvm: 2.1.10
+    - rvm: 2.1.9
       gemfile: gemfiles/Gemfile.rails-5.0.x
 
 before_script:
