--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ matrix:
     # rack with rails 5 cannot be installed in ruby versions prior to 2.2.2
     - rvm: 2.1.9
       gemfile: gemfiles/Gemfile.rails-5.0.x
+    # Numeric incompatabilty with Rails 5.1.x
+    - rvm: 2.1.9
+      gemfile: gemfiles/Gemfile.rails-5.1.x
     # Numeric incompatabilty with Rails 3.2.x
     - rvm: 2.4.1
       gemfile: gemfiles/Gemfile.rails-3.2.x
