--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ gemfile:
   - gemfiles/Gemfile.rails-5.0.x
   - gemfiles/Gemfile.rails-5.1.x
   - gemfiles/Gemfile.rails-5.2.x
+  - gemfiles/Gemfile.rails-6.0.x
 
 matrix:
   exclude:
@@ -18,7 +19,9 @@ matrix:
       gemfile: gemfiles/Gemfile.rails-4.2.x
     - rvm: 2.6.3
       gemfile: gemfiles/Gemfile.rails-4.2.x
-
+    # Rails 6.0.x doesn't support ruby prior to ruby 2.5.0
+    - rvm: 2.4.5
+      gemfile: gemfiles/Gemfile.rails-6.0.x
 before_script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
 
