--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,14 @@ jobs:
           - 3.0.6
           - 3.1.4
           - 3.2.2
-        gemfile:
-          - gemfiles/Gemfile.rails-4.2.x
-          - gemfiles/Gemfile.rails-5.0.x
-          - gemfiles/Gemfile.rails-5.1.x
-          - gemfiles/Gemfile.rails-5.2.x
-          - gemfiles/Gemfile.rails-6.0.x
-          - gemfiles/Gemfile.rails-6.1.x
-          - gemfiles/Gemfile.rails-7.0.x
+        rails:
+          - 4.2.0
+          - 5.0.0
+          - 5.1.0
+          - 5.2.0
+          - 6.0.0
+          - 6.1.0
+          - 7.0.0
     services:
       postgres:
         image: postgres:11-alpine
@@ -35,6 +35,7 @@ jobs:
           POSTGRES_USER: rails
           POSTGRES_PASSWORD: password
     env:
+      RAILS_VERSION: ${{ matrix.rails }}
       RAILS_ENV: test
       DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
     steps:
