--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,22 +9,54 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby:
-          - 2.4.10
-          - 2.5.9
-          - 2.6.10
-          - 2.7.8
-          - 3.0.6
-          - 3.1.4
-          - 3.2.2
+        # https://rubyonrails.org/category/releases
+        # https://rubyonrails.org/maintenance
         rails:
-          - 4.2.0
-          - 5.0.0
-          - 5.1.0
-          - 5.2.0
+          - 4.2.0 # not maintained by rails team
+          - 5.0.0 # not maintained by rails team
+          - 5.1.0 # not maintained by rails team
+          - 5.2.0 # security releases
           - 6.0.0
           - 6.1.0
           - 7.0.0
+        # https://www.ruby-lang.org/en/downloads/
+        ruby:
+          - 2.4.10 # not maintained by ruby team
+          - 2.5.9 # not maintained by ruby team
+          - 2.6.10 # not maintained by ruby team
+          - 2.7.8 # security maintenance phase
+          - 3.0.6
+          - 3.1.4
+          - 3.2.2
+        exclude:
+          # rails 4.2.x needs bundler version < 2.0
+          - rails: 4.2.0
+            ruby: 2.4.10
+          - rails: 4.2.0
+            ruby: 2.5.9
+          - rails: 4.2.0
+            ruby: 2.6.10
+          - rails: 4.2.0
+            ruby: 2.7.8
+          - rails: 4.2.0
+            ruby: 3.0.6
+          - rails: 4.2.0
+            ruby: 3.1.4
+          - rails: 4.2.0
+            ruby: 3.2.2
+          # Rails 6 needs ruby >= 2.5.0
+          - rails: 6.0.0
+            ruby: 2.4.10
+          # Rails 6.1 needs ruby >= 2.5.0
+          - rails: 6.1.0
+            ruby: 2.4.10
+          # Rails 7 needs ruby >= 2.7.0
+          - rails: 7.0.0
+            ruby: 2.4.10
+          - rails: 7.0.0
+            ruby: 2.5.9
+          - rails: 7.0.0
+            ruby: 2.6.10
     services:
       postgres:
         image: postgres:11-alpine
