--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           - 4.2.0 # not maintained by rails team
           - 5.0.0 # not maintained by rails team
           - 5.1.0 # not maintained by rails team
-          - 5.2.0 # security releases
+          - 5.2.0 # not maintained by rails team
           - 6.0.0
           - 6.1.0
           - 7.0.0
@@ -64,6 +64,10 @@ jobs:
             ruby: 3.1.4
           - rails: 5.2.0
             ruby: 3.2.2
+          # rails 5.2.0 has issues with psych gem with AR
+          # https://github.com/rails/rails/issues/45590
+          - rails: 5.2.0
+            ruby: 2.5.9
           # Rails 6 needs ruby >= 2.5.0
           - rails: 6.0.0
             ruby: 2.4.10
@@ -88,6 +92,7 @@ jobs:
           POSTGRES_PASSWORD: password
     env:
       RAILS_VERSION: ${{ matrix.rails }}
+      RUBY_VERSION: ${{ matrix.ruby }}
       RAILS_ENV: test
       DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
     steps:
